Update Render static site definition

--- a/render.yaml
+++ b/render.yaml
@@ -13,13 +13,17 @@ services:
       - key: ARCGIS_AUTH_TOKEN
         value: ""
 
-  - type: static
+  - type: static_site
     name: parcel-agent-frontend
+    env: static
     branch: main
     buildCommand: npm install && npm run build
     publishPath: dist
     envVars:
       - key: VITE_API_BASE
-        value: https://parcel-agent-api.onrender.com
+        fromService:
+          name: parcel-agent-api
+          type: web
+          property: url
       - key: VITE_API_KEY
         value: Qldmapper2025
