--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 # Render Blueprint for Parcel Agent
+specVersion: "1"
 services:
   - type: web
     name: parcel-agent-api
@@ -13,8 +14,8 @@ services:
       - key: ARCGIS_AUTH_TOKEN
         value: ""
 
-staticSites:
-  - name: parcel-agent-frontend
+  - type: static_site
+    name: parcel-agent-frontend
     branch: main
     buildCommand: npm install && npm run build
     publishPath: dist
